setup basic apache-style directory index

--- a/pieces/arturo.yml
+++ b/pieces/arturo.yml
@@ -1,5 +1,7 @@
 title: Arturo
 slug: arturo
+date: 2018-07-28
+description: The dreams and journeys of the little Arturo.
 
 scenes:
   - name: Cover
