--- a/static/manifest.json
+++ b/static/manifest.json
@@ -7,14 +7,14 @@
   "start_url": "/",
   "icons": [
     {
-      "src": "text.gif",
+      "src": "logo-192.png",
       "sizes": "192x192",
-      "type": "image/gif"
+      "type": "image/png"
     },
     {
-      "src": "text.gif",
+      "src": "logo-512.png",
       "sizes": "512x512",
-      "type": "image/gif"
+      "type": "image/png"
     }
   ]
 }
