--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "start": "node __sapper__/build",
     "validate": "svelte-check --ignore src/node_modules/@sapper"
   },
+  "cypress-cucumber-preprocessor": {
+    "nonGlobalStepDefinitions": true
+  },
   "dependencies": {
     "compression": "^1.7.1",
     "polka": "next",
@@ -30,6 +33,8 @@
     "@types/compression": "^1.7.0",
     "@types/node": "^14.11.1",
     "@types/polka": "^0.5.1",
+    "cypress": "^5.3.0",
+    "cypress-cucumber-preprocessor": "^3.0.0",
     "rollup": "^2.3.4",
     "rollup-plugin-svelte": "^6.0.0",
     "rollup-plugin-terser": "^7.0.0",
