--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "compression": "^1.7.1",
+    "directory-tree": "^2.2.5",
     "polka": "next",
     "sirv": "^1.0.0",
     "yaml": "^1.10.0"
