--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@types/compression": "^1.7.0",
     "@types/node": "^14.11.1",
     "@types/polka": "^0.5.1",
-    "cypress": "^5.3.0",
+    "cypress": "6.2.0",
     "cypress-cucumber-preprocessor": "^3.0.0",
     "rollup": "^2.3.4",
     "rollup-plugin-svelte": "^6.0.0",
