--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "sapper build --legacy",
     "export": "sapper export --legacy --concurrent 1",
     "start": "node __sapper__/build",
-    "validate": "svelte-check --ignore src/node_modules/@sapper"
+    "validate": "svelte-check --ignore src/node_modules/@sapper",
+    "new": "node scripts/newPiece.js"
   },
   "cypress-cucumber-preprocessor": {
     "nonGlobalStepDefinitions": true
