--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 .DS_Store
 /node_modules/
-/src/node_modules/@sapper/
 yarn-error.log
 /__sapper__/
 
 # Local Netlify folder
 .netlify
+
+.svelte-kit/
