more fixes, getting rid of sapper refs

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
         with:
           record: true
           build: yarn export
-          start: yarn serve -l 3000 __sapper__/export/
+          start: yarn serve -l 3000 build/
           browser: electron
         env:
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
