--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
     "@rollup/plugin-node-resolve": "^8.0.0",
     "@rollup/plugin-replace": "^2.2.0",
     "@rollup/plugin-typescript": "^6.0.0",
-    "@sveltejs/adapter-static": "next",
-    "@sveltejs/kit": "next",
-    "@tsconfig/svelte": "^1.0.10",
+    "@sveltejs/adapter-static": "^1.0.0-next.16",
+    "@sveltejs/kit": "^1.0.0-next.150",
+    "@tsconfig/svelte": "^2.0.1",
     "@types/compression": "^1.7.0",
     "@types/node": "^14.11.1",
     "@types/polka": "^0.5.1",
@@ -40,9 +40,9 @@
     "rollup-plugin-svelte": "^6.0.0",
     "rollup-plugin-terser": "^7.0.0",
     "serve": "^11.3.2",
-    "svelte": "^3.38.2",
-    "svelte-check": "^1.0.46",
-    "svelte-preprocess": "^4.7.3",
+    "svelte": "^3.42.1",
+    "svelte-check": "^2.2.4",
+    "svelte-preprocess": "^4.7.4",
     "tslib": "^2.0.1",
     "typescript": "^4.0.3",
     "vite": "^2.3.7"
