--- a/pieces/old/drum.yml
+++ b/pieces/old/drum.yml
@@ -1,4 +1,4 @@
-title: Drum
+title: DRUM (CASKET)
 slug: drum
 date: 2015-05-??
 description: "a collection of poems/sketches i wrote in my junior year of college. i don't love them. the writing is heavily inspired by kerouac's 'visions of cody' (which i was reading at the time) and inherits a lot of his egotism & crudeness."
