add babys to carl

--- a/pieces/old/drum.yml
+++ b/pieces/old/drum.yml
@@ -90,6 +90,11 @@ scenes:
         content: >-
           SARAH WITH A SMALL VCR records herself writing & stops rolls now on the wood floor - she is four again & dog knows too licking her legs laughing & parents come home - to room - alone & reminiscing on everything and her nostalgic diamond headcenter sends tears to her eyes & remembers Mom and Dad - & what would they think now - she's old - death-bound - 20 & paranoyd and so lonely she thinks it'll never end - old shirts she never wears in the closet - mom dad stepping up the stairs talking violins & she lays in bed & tickles her ear - and wants to go home - old familiar trees in window covering the pool from the quiet night - bathing moonlit arms — o what sadness life has brung - to Sarah - who only wants a well-wet soul - soaked with love & Friends - & nights - & bright days - to sell old books on caterpillars to children - write stories about moonfeet and wonder wars — My door is rattling to tell me it's ok - & keeps rattling even past this poem - All Zach i love you please know forever and grab your fingers into my hair i'm crying
   - name: Carl and Mount Everest
+    meta:
+      song:
+        name: Babys (AIR Studios – 4AD​/​Jagjaguwar Session)
+        artist: Bon Iver
+        url: /audio/babys-air-studio.mp3
     sections:
       - type: Text
         content: >-
