--- a/package.json
+++ b/package.json
@@ -28,19 +28,19 @@
     "@rollup/plugin-node-resolve": "^8.0.0",
     "@rollup/plugin-replace": "^2.2.0",
     "@rollup/plugin-typescript": "^6.0.0",
-    "@sveltejs/adapter-static": "^1.0.0-next.18",
-    "@sveltejs/kit": "^1.0.0-next.165",
+    "@sveltejs/adapter-static": "^1.0.0-next.21",
+    "@sveltejs/kit": "^1.0.0-next.196",
     "@tsconfig/svelte": "^2.0.1",
     "@types/compression": "^1.7.0",
     "@types/node": "^14.11.1",
     "@types/polka": "^0.5.1",
-    "cypress": "6.2.0",
-    "cypress-cucumber-preprocessor": "^3.0.0",
+    "cypress": "^9.0.0",
+    "cypress-cucumber-preprocessor": "^4.3.0",
     "rollup": "^2.3.4",
     "rollup-plugin-svelte": "^6.0.0",
     "rollup-plugin-terser": "^7.0.0",
-    "serve": "^11.3.2",
-    "svelte": "^3.42.1",
+    "serve": "^13.0.2",
+    "svelte": "^3.44.2",
     "svelte-check": "^2.2.4",
     "svelte-preprocess": "^4.7.4",
     "tslib": "^2.0.1",
