--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/polka": "^0.5.1",
     "cypress": "^9.0.0",
     "cypress-cucumber-preprocessor": "^4.3.0",
+    "node-fetch": "^3.1.0",
     "rollup": "^2.3.4",
     "rollup-plugin-svelte": "^6.0.0",
     "rollup-plugin-terser": "^7.0.0",
