--- a/pieces/bookplaylists/__meta__.yml
+++ b/pieces/bookplaylists/__meta__.yml
@@ -1,1 +1,1 @@
-description: the playlists I listen to while I read
+description: the playlists I listen to while I read. date is when i finished the book.
