--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,15 +23,15 @@ jobs:
 
       - uses: actions/setup-node@v2
         with:
-          node-version: '16'
+          node-version: "16"
 
       # Runs a single command using the runners shell
       - name: cypress
         uses: cypress-io/github-action@v2
         with:
           record: true
-          build: yarn export
-          start: yarn serve -l 3000 build/
+          build: yarn build
+          start: yarn preview
           browser: electron
         env:
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
