--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "svelte-kit dev",
-    "export": "svelte-kit build",
+    "build": "svelte-kit build",
+    "preview": "svelte-kit preview",
     "start": "node build",
     "validate": "svelte-check",
     "new": "node scripts/newPiece.js"
@@ -14,6 +15,7 @@
     "nonGlobalStepDefinitions": true
   },
   "dependencies": {
+    "@sveltejs/adapter-netlify": "^1.0.0-next.35",
     "directory-tree": "^2.2.5",
     "yaml": "^1.10.0"
   },
