--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "svelte-kit dev",
     "build": "svelte-kit build",
     "preview": "svelte-kit preview",
+    "netlify": "netlify dev -d build/ -f ./netlify/functions-internal",
     "start": "node build",
     "validate": "svelte-check",
     "new": "node scripts/newPiece.js"
