--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "type": "module",
     "scripts": {
         "dev": "svelte-kit dev",
-        "build": "svelte-kit build && cp -r ./pieces ./build/",
+        "build": "svelte-kit build",
         "preview": "svelte-kit preview",
         "netlify": "netlify dev -d build/ -f ./netlify/functions-internal",
         "start": "node build",
