--- a/pieces/bookplaylists/cien-anos.yml
+++ b/pieces/bookplaylists/cien-anos.yml
@@ -3,18 +3,9 @@ date: 2021-03-06
 pieceType: BookPlaylist
 isbn: "9781101910979"
 playlist: https://open.spotify.com/album/07YUwExZCapalNtjIhR6av
-note: First time reading a book in the original Spanish. It took forever. But it
-  was fun. And, of course, incredible. I remember finding a Murakami interview
-  where he talks about Marquez and says something like, "people say what Marquez
-  does is magical realism.. but I imagine it is very real to him." I think of
-  the flowers falling in the town until the animals couldn't walk. Remedios la
-  Bella flying up to heavens, a man with his broken bones and yellow amber
-  pouring out of them. Wow. I'd like to read this book again, soon. Though
-  there's more spanish I'd like to read, like Casa de Espiritus. Anyways this
-  Teresa Gómez record is one of the best. M... what's his name... la Gitona con
-  los does igotes?
 book:
   title: Cien años de soledad
   author: Gabriel García Márquez
   image: https://books.google.com/books/content?id=HbsZEAAAQBAJ&printsec=frontcover&img=1&zoom=1&edge=curl&source=gbs_api
   url: https://books.google.com/books?vid=ISBN9781101910979
+  pageCount: 496
