--- a/pieces/bookplaylists/dead-souls.yml
+++ b/pieces/bookplaylists/dead-souls.yml
@@ -3,20 +3,9 @@ date: 2020-11-08
 pieceType: BookPlaylist
 isbn: "9780758334107"
 playlist: https://open.spotify.com/album/5XD78Fc6jfSfFYgwynseoI
-note: >-
-  Big rec from Gabe. It's dawning on me as I backfill these that I need to find
-  more of my own books. Dead Souls was part of Gabe's undergrad thesis (I
-  believe) and was part of an early vision for a dissertation - comparing some
-  symbols in Dead Souls and The Idiot.. particularly the "troika". So I remember
-  walking during the bad bad covid times on the east river, under neath the part
-  of the FDR between the Manhattan and Brooklyn bridge where the beams are all
-  purple, and Gabe explained to me on the phone about the troika (which for some
-  reason I thought was an eagle... maybe that is part of the metaphor?) and
-  epilepsy (in The Idiot).
-
-  Without knowing any of the actual content of Dead Souls (besides that last scene) I thought dead souls was going to be something of a horror or ghost story, so I chose a funnily creepy soundtrack to play it to. (Nils Frahm is who I listened to while reading House of Leaves.) I actually thought the eery vibe worked quite well. Particularly ... the parts, that were creepy.
 book:
   title: Dead Souls
   author: Nikolaĭ Vasilʹevich Gogolʹ
   image: https://books.google.com/books/content?id=CNhMAAAAYAAJ&printsec=frontcover&img=1&zoom=1&edge=curl&source=gbs_api
   url: https://books.google.com/books?vid=ISBN9780758334107
+  pageCount: 324
