--- a/pieces/bookplaylists/beloved.yml
+++ b/pieces/bookplaylists/beloved.yml
@@ -3,22 +3,9 @@ date: 2020-09-03
 pieceType: BookPlaylist
 isbn: "9780307388629"
 playlist: https://open.spotify.com/playlist/01ZeK59mzjn9MIVbss8C6W
-note: "Rec from Gabe. Though I'd been wanting to read Toni Morrison for a while,
-  especially since she passed away, and I read a beautiful tribute piece to her
-  in the New Yorker. I had learned about Hazel Scott on the \"memory palace\"
-  podcast. Seemed like a nice match. I think of that quote from Kerouac's \"tips
-  to spontaneous writing\": \"visionary tics in the chest\". I remember being
-  blown away particularly by the end of some chapter, in which -- I forget their
-  names -- the lead woman and her prior husband -- make love on the field, and
-  \"how sweet and free the juice of the corn\"... or something like that. It was
-  september and I happened to be eating a lot of corn, right from the farmers
-  market, often raw and sweet from my fridge. Anyway I think something clicked
-  for me there about poetry being embedded in a novel, breaking through from the
-  novel... subtly, sparingly. I also thought quite a bit about her journey
-  through the woods with that strange white girl who was obsessed with red
-  velvet (?) during my long trail hike."
 book:
   title: Beloved
   author: Toni Morrison
   image: https://books.google.com/books/content?id=sfmp6gjZGP8C&printsec=frontcover&img=1&zoom=1&edge=curl&source=gbs_api
   url: https://books.google.com/books?vid=ISBN9780307388629
+  pageCount: 352
