--- a/pieces/bookplaylists/fun-home.yml
+++ b/pieces/bookplaylists/fun-home.yml
@@ -3,9 +3,9 @@ date: 2021-08-22
 pieceType: BookPlaylist
 isbn: "9780618871711"
 playlist: https://open.spotify.com/album/1p3Yw1LPlnabOnywMjsFvD
-note: Yes!
 book:
   title: Fun Home
   author: Alison Bechdel
   image: https://books.google.com/books/content?id=eq0n9Ck79ysC&printsec=frontcover&img=1&zoom=1&edge=curl&source=gbs_api
   url: https://books.google.com/books?vid=ISBN9780618871711
+  pageCount: 232
