--- a/pieces/bookplaylists/jazz.yml
+++ b/pieces/bookplaylists/jazz.yml
@@ -3,9 +3,9 @@ date: 2021-12-18
 pieceType: BookPlaylist
 isbn: "9780307388100"
 playlist: https://open.spotify.com/playlist/6Lu3Q9we00W5ECvNATtOvY
-note: Welp, very good!
 book:
   title: Jazz
   author: Toni Morrison
   image: https://books.google.com/books/content?id=JvcvHpLfVPoC&printsec=frontcover&img=1&zoom=1&edge=curl&source=gbs_api
   url: https://books.google.com/books?vid=ISBN9780307388100
+  pageCount: 256
