--- a/pieces/verse-poetry/__meta__.yml
+++ b/pieces/verse-poetry/__meta__.yml
@@ -1,1 +1,2 @@
 description: verse poetry, often written in the morning, inspired by a weekend at home (with my parents) where i watched joel coen's macbeth and read alison bechdel's secret to superhuman strength.
+title: verse poetry
