--- a/package.json
+++ b/package.json
@@ -37,15 +37,19 @@
         "@rollup/plugin-typescript": "^6.0.0",
         "@tsconfig/svelte": "^3.0.0",
         "@types/compression": "^1.7.0",
+        "@types/jest": "^28.1.4",
         "@types/node": "^14.11.1",
         "@types/polka": "^0.5.1",
         "cypress": "^9.0.0",
         "cypress-cucumber-preprocessor": "^4.3.0",
+        "jest": "^28.1.2",
         "node-fetch": "^3.1.0",
         "rollup": "^2.61.1",
         "rollup-plugin-svelte": "^7.1.0",
         "rollup-plugin-terser": "^7.0.0",
         "serve": "^13.0.2",
+        "ts-jest": "^28.0.5",
+        "ts-node": "^10.8.2",
         "tslib": "^2.0.1",
         "typescript": "^4.7.4",
         "vite": "^2.9.13"
