--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
         "new": "node scripts/newPiece.js"
     },
     "cypress-cucumber-preprocessor": {
-        "nonGlobalStepDefinitions": true
+        "stepDefinitions": [
+            "cypress/e2e/*.{js,ts}"
+        ]
     },
     "dependencies": {
         "@sveltejs/adapter-netlify": "^1.0.0-next.66",
@@ -30,6 +32,8 @@
         "@babel/plugin-transform-runtime": "^7.0.0",
         "@babel/preset-env": "^7.0.0",
         "@babel/runtime": "^7.0.0",
+        "@badeball/cypress-cucumber-preprocessor": "^11.4.0",
+        "@cypress/webpack-preprocessor": "^5.12.0",
         "@rollup/plugin-babel": "^5.0.0",
         "@rollup/plugin-commonjs": "^14.0.0",
         "@rollup/plugin-node-resolve": "^8.0.0",
@@ -40,8 +44,7 @@
         "@types/jest": "^28.1.4",
         "@types/node": "^14.11.1",
         "@types/polka": "^0.5.1",
-        "cypress": "^9.0.0",
-        "cypress-cucumber-preprocessor": "^4.3.0",
+        "cypress": "^10.3.0",
         "jest": "^28.1.2",
         "node-fetch": "^3.1.0",
         "rollup": "^2.61.1",
@@ -49,10 +52,12 @@
         "rollup-plugin-terser": "^7.0.0",
         "serve": "^13.0.2",
         "ts-jest": "^28.0.5",
+        "ts-loader": "^9.3.1",
         "ts-node": "^10.8.2",
         "tslib": "^2.0.1",
         "typescript": "^4.7.4",
-        "vite": "^2.9.13"
+        "vite": "^2.9.13",
+        "webpack": "^5.73.0"
     },
     "volta": {
         "node": "16.15.1"
