--- a/netlify.toml
+++ b/netlify.toml
@@ -7,3 +7,8 @@
 
 [context.production.environment]
 AWS_LAMBDA_JS_RUNTIME = "nodejs16.x"
+NODE_VERSION = "14
+
+[context.deploy-preview.environment]
+AWS_LAMBDA_JS_RUNTIME = "nodejs16.x"
+NODE_VERSION = "14
