--- a/pieces/college/drum.yml
+++ b/pieces/college/drum.yml
@@ -1,6 +1,6 @@
 title: DRUM (CASKET)
 date: 2015-05-??
-description: "a collection of poems/sketches i wrote in my junior year of college. i don't love them. the writing is heavily inspired by kerouac's 'visions of cody' (which i was reading at the time) and inherits a lot of his egotism & crudeness."
+description: "a collection of poems/sketches i wrote in my junior year of college. the writing is heavily inspired by kerouac's 'visions of cody'"
 
 scenes:
   - name: Front Cover
