actually keep a small image blast at end

--- a/pieces/scribly/intercontinental-bus.yml
+++ b/pieces/scribly/intercontinental-bus.yml
@@ -198,59 +198,9 @@ scenes:
         url: /audio/claire-de-lune.mp3
     sections:
       - type: Image
-        url: /images/scribly/dall-e-newspaper.png
-        caption: old newspaper called “Foundation for Freedom of Speech for the Moon Emperors”, oil painting
-  - name: I2
-    meta:
-      song:
-        name: Claire de Lune
-        artist: Claude Debussy
-        url: /audio/claire-de-lune.mp3
-    sections:
-      - type: Image
-        url: /images/scribly/dall-e-moon-editor-alt.png
-        caption: an editor on the moon with glistening skin, oil painting
-  - name: I3
-    meta:
-      song:
-        name: Claire de Lune
-        artist: Claude Debussy
-        url: /audio/claire-de-lune.mp3
-    sections:
-      - type: Image
-        url: /images/scribly/dall-e-temples-lit.png
-        caption: temples lit aflaime, oil painting
-  - name: I4
-    meta:
-      song:
-        name: Claire de Lune
-        artist: Claude Debussy
-        url: /audio/claire-de-lune.mp3
-    sections:
-      - type: Image
-        url: /images/scribly/dall-e-desert-eyes.png
-        caption: in the blackened dakota wastes, a man with symbols on his eyes, oil painting
-  - name: I5
-    meta:
-      song:
-        name: Claire de Lune
-        artist: Claude Debussy
-        url: /audio/claire-de-lune.mp3
-    sections:
-      - type: Image
-        url: /images/scribly/dall-e-cyclists-2.png
-        caption: in the ocean a group of cyclists is floating, oil painting
-  - name: I6
-    meta:
-      song:
-        name: Claire de Lune
-        artist: Claude Debussy
-        url: /audio/claire-de-lune.mp3
-    sections:
-      - type: Image
-        url: /images/scribly/dall-e-cyclists-3.png
+        url: /images/scribly/dall-e-cyclists-alt.png
         caption: in the ocean a group of cyclists is gazing at the moon, oil painting
-  - name: I7
+  - name: I2
     meta:
       song:
         name: Claire de Lune
@@ -260,7 +210,7 @@ scenes:
       - type: Image
         url: /images/scribly/dall-e-hand-to-moon.png
         caption: a hand stretches towards the moon, oil painting
-  - name: I8
+  - name: End
     meta:
       song:
         name: Claire de Lune
