update description of notes

--- a/pieces/notes/__meta__.yml
+++ b/pieces/notes/__meta__.yml
@@ -1,1 +1,1 @@
-description: poems or writings scribbled on my notes app
+description: poems or writings scribbled on my notes app or dictated into my phone
