add letters, ii

--- a/pieces/letters-i.yml
+++ b/pieces/letters-i.yml
@@ -1,4 +1,4 @@
-title: letters, 1
+title: letters, i
 date: 2022-09-03
 
 scenes:
@@ -6,7 +6,7 @@ scenes:
     type: Card
     sections:
       - type: Title
-        content: letters, 1
+        content: letters, i
   - name: "To Ma, From Pip"
     sections:
       - type: Text
